--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
     - name: Build
       uses: xanderhendriks/action-build-stm32cubeide@v5.0
       with:
-        project-path: 'e4e_sleep_timer_fw/e4e_sleep_timer_fw'
-        project-target: 'e4e_sleep_timer_fw'
+        project-path: 'e4e_sleep_timer_fw'
+        project-target: 'Release'
     - name: Inspect
       run: |
         ls -alh e4e_sleep_timer_fw
