--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       uses: xanderhendriks/action-build-stm32cubeide@v5.0
       with:
         project-path: 'e4e_sleep_timer_fw'
-        project-target: 'Release'
+        project-target: 'e4e_sleep_timer_fw'
     - name: Inspect
       run: |
         ls -alh e4e_sleep_timer_fw
